# hackathon_manas_2026

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: main.py
app/api/: dependencies.py
app/api/routes/: asr.py  chat.py  fact_of_day.py  get_info.py  pdf.py  save_doc.py  voice.py
app/core/: config.py
app/prompts/chat/: answer_system.j2  answer_user.j2  router_system.j2  router_user.j2
app/prompts/get_info/: classify_system.j2  classify_user.j2  plural_system.j2  plural_user.j2  single_system.j2  single_user.j2
app/schemas/: api.py  audio.py  chat.py  errors.py  extraction.py  pdf.py
app/services/: asr_service.py  audio_language.py  chat_answer_generator.py  chat_evaluation.py  chat_service.py  chunking.py  duplicate_detection.py  fact_of_day_service.py  get_info_service.py  index_store.py  layout_parsing_client.py  normalization.py  openai_client.py  pdf_ocr_service.py  person_profile.py  persons_shadow_importer.py  prompt_renderer.py  retrieval.py  save_doc_service.py  voice_service.py
docs/: ai_endpoints.txt  final_tz.docx  get_info_implementation_plan.md  save_doc_and_chat_plan.md
scripts/: generate_chat_eval_results.py  import_persons_shadow.py  judge_chat_eval_results.py
tests/: test_audio_endpoints.py  test_audio_language.py  test_chat_endpoint.py  test_chat_evaluation.py  test_chat_service.py  test_fact_of_day.py  test_get_info_endpoint.py  test_get_info_schema.py  test_normalization.py  test_pdf_endpoint.py  test_persons_shadow_importer.py  test_retrieval.py  test_save_doc_service.py
(+2 files in other folders)
